--- a/TrackVersion2/bin/AndroidManifest.xml
+++ b/TrackVersion2/bin/AndroidManifest.xml
@@ -26,16 +26,41 @@
         <activity
             android:name="org.developerworks.android.tracks.MainActivity"
             android:label="@string/app_name" >
-            
         </activity>
         <activity
             android:name="org.developerworks.android.tracks.CameraOverlay"
             android:label="@string/title_activity_camera_overlay" >
-        </activity>        
+        </activity>
+        <activity
+            android:name="org.developerworks.android.tracks.MapView"
+            android:label="@string/title_activity_map_view" >
+        </activity>
+
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyCoSskFwuNtiSIu4jkBahwpIuiUJqil3UA" />
+
+        <activity
+            android:name="org.developerworks.android.tracks.TrackSelection"
+            android:label="@string/title_activity_track_selection" >
+        </activity>
     </application>
 
+    <permission
+        android:name="org.developerworks.android.tracks.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="com.example.mapdemo.permission.MAPS_RECEIVE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
 
 </manifest>
